header design completed

--- a/index.html
+++ b/index.html
@@ -5,15 +5,34 @@
         <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body>
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
-        <p>This is a paragraph.</p>
-        <p>This is a paragraph.</p>
-        <p>This is a paragraph.</p>
-        <p>This is a paragraph.</p>
-        <p>This is a paragraph.</p>
-        <p>This is a paragraph.</p>
-        <p>This is a paragraph.</p>
-
+        <!-- display:flex; very very important-->
+        <!-- block level element and inline element; very very important-->
+        <header class="header">
+            <div>
+                <ul class="nav-left-content">
+                    <li>Products</li>
+                    <li>Resources</li>
+                    <li>Inspiration</li>
+                    <li>Pricing</li>
+                </ul>
+            </div>
+            <div>
+                <p>Image</p>
+            </div>
+            <div class="nav-right-content">
+                <div>
+                    <img src="images/world_icon.png" width="24" />
+                </div>
+                <div class="search">
+                    <img src="images/search-icon.png" width="36" />
+                </div>
+                <div>
+                    <button class="btn-login">Login</button>
+                </div>
+                <div>
+                    <button class="btn-sign-up">Sign up free</button>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
