header section completed

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </div>
             <div class="nav-right-content">
                 <div>
-                    <img src="images/world_icon.png" width="24" />
+                    <img src="images/world_icon.png" class="world_icon" width="24" />
                 </div>
                 <div class="search">
-                    <img src="images/search-icon.png" width="36" />
+                    <img src="images/search-icon.png" class="search_icon" width="36" />
                 </div>
                 <div>
                     <button class="btn-login">Login</button>
@@ -34,5 +34,21 @@
                 </div>
             </div>
         </header>
+        <section class="header-section">
+            <div>
+                <h2 class="section-heading" style="width: 282px">Do it all with Mailchimp</h2>
+                <p class="header-para">With Mailchimp, you get the tools you need to sell your products, reach new customers, and take your business to the next level.</p>
+                <div style="margin-top: 36px; margin-bottom: 48px;">
+                    <a href="#" class="btn-sign-up btn-header">Sign Up</a>
+                </div>
+                <p style="opacity: 0.6;">No credit card required</p>
+            </div>
+            <div>
+                <img src="https://eep.io/images/yzco4xsimv0y/1P5Vc22g3AhhQVDjn4hWS9/e95247e24bdb20a85432ad0fea7250d8/mtsb_homepage_hero_floats_grow_with_mailchimp__1___1_.png?w=1520&fm=webp&q=70" width="400"/>
+            </div>
+        </section>
+        <footer>
+
+        </footer>
     </body>
 </html>
